<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuator_bringup</name>
  <version>0.0.0</version>
  <description>This is the package in charge of launching all nodes depending on required configuration</description>
  <maintainer email="florian.armange@orthopus.com">Florian Armange</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>actuator_msgs</exec_depend>
  <exec_depend>actuator_driver</exec_depend>
  <exec_depend>actuator_test_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
